# VirtualMemorySimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
PageTable/: MemoryManager.cpp  MemoryManager.h  PageTable.cpp  PageTable.h  PageTableEntry.cpp  PageTableEntry.h  PhysicalFrameManager.cpp  PhysicalFrameManager.h  TLB.cpp  TLB.h  TLBEntry.h  pageTable.cpp  pageTableEntry.cpp  pageTableEntry.h  page_table_test  physicalFrameManager.cpp  physicalFrameManger.h
PageTable/helperFiles/: ClockAlgorithm.cpp  ClockAlgorithm.h
PageTable/test/: MemoryManagerTest.cpp  testPage.cpp
SampleOutput/: SampleOutput.txt  cmd.md  instructions.txt
TLB/: TLB.cpp  TLB.h  TLBEntry.cpp
